--- a/src/app/groupmembers/groupmembers.page.html
+++ b/src/app/groupmembers/groupmembers.page.html
@@ -26,19 +26,22 @@
 
   <ion-list>
     <ion-item>
-      <ion-label>Student Name 1</ion-label>
+      <ion-label>Resurreccion, Harvey Van S.</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Student Name 2</ion-label>
+      <ion-label>Pineda, John Paul O.</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Student Name 3</ion-label>
+      <ion-label>Alquizar, Elizah Laine Kayla</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Student Name 4</ion-label>
+      <ion-label>Bautistia, Anthony D.</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Just add more on the list if needed...</ion-label>
+      <ion-label>Adriano, Arriane Nicole</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Bio, Xeniorita Alondra</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
